# maestro

./: .env.example  .gitignore  CLAUDE.md  MEMORY.md
src/backend/: alembic.ini  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: 0001_initial_schema.py
src/backend/src/maestro/: __init__.py  config.py  main.py
src/backend/src/maestro/agents/: base.py  content_selector.py  diagnostic.py  profiler.py
src/backend/src/maestro/auth/: dependencies.py  keycloak.py  rbac.py  router.py
src/backend/src/maestro/common/: audit.py  exceptions.py  schemas.py
src/backend/src/maestro/content/: __init__.py  cache.py  models.py  quiz_engine.py  router.py  schemas.py  text_agent.py
src/backend/src/maestro/db/: __init__.py  __main__.py  engine.py  init_db.py  seed.py
src/backend/tests/: conftest.py
src/backend/tests/integration/: __init__.py  test_api_routes.py  test_auth_rbac_flow.py  test_orchestrator_flow.py  test_pseudonymisation_pipeline.py  test_quiz_bloom_pipeline.py  test_safeguarding_content_pipeline.py  test_state_transition_flow.py
src/backend/tests/unit/: test_agents.py  test_alerts.py  test_api_health.py  test_audit.py  test_auth.py  test_cache.py  test_concept_mapper.py  test_config.py  test_exceptions.py  test_graph_extract.py  test_heatmap.py  test_ingestion.py  test_kmm_service.py  test_llm_gateway.py  test_main_app.py  test_orchestrator.py  test_orchestrator_state.py  test_pseudonymizer.py  test_quiz_engine.py  test_retention.py  test_retry.py  test_safeguarding.py  test_schemas.py  test_state_machine.py  test_text_agent.py
(+242 files in other folders)
