[project]
name = "maestro-backend"
version = "0.1.0"
description = "MAESTRO - Personalised Learning Companion Backend"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",

    # Orchestrator
    "langgraph>=0.3",
    "langgraph-checkpoint-postgres>=2.0",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3",

    # LLM clients
    "anthropic>=0.42",
    "openai>=1.60",
    "httpx>=0.28",

    # Auth
    "python-jose[cryptography]>=3.3",
    "cryptography>=44",

    # Cache
    "redis[hiredis]>=5.2",

    # Observability
    "opentelemetry-api>=1.29",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-instrumentation-fastapi>=0.50b",
    "structlog>=24.4",

    # Utilities
    "python-multipart>=0.0.18",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maestro"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
